[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "posthook"
dynamic = ["version"]
description = "The official Python client library for the Posthook API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Posthook", email = "support@posthook.io" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.25.0,<1"]

[project.urls]
Homepage = "https://posthook.io"
Documentation = "https://posthook.io/docs"
Repository = "https://github.com/posthook/posthook-python"

[tool.hatch.version]
path = "src/posthook/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
